# tauri-browser

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  publish.yml  release.yml
crates/tauri-browser/: Cargo.toml
crates/tauri-browser/src/: client.rs  main.rs  output.rs
crates/tauri-plugin-debug-bridge/: Cargo.toml  build.rs
crates/tauri-plugin-debug-bridge/permissions/: default.toml
crates/tauri-plugin-debug-bridge/permissions/autogenerated/: reference.md
crates/tauri-plugin-debug-bridge/permissions/autogenerated/commands/: console_callback.toml  eval_callback.toml
crates/tauri-plugin-debug-bridge/permissions/schemas/: schema.json
crates/tauri-plugin-debug-bridge/src/: backend.rs  events.rs  lib.rs  logs.rs  webview.rs
skill/: SKILL.md
