[workspace]
members = ["crates/tauri-plugin-debug-bridge", "crates/tauri-browser"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Paul Thrasher"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
