[package]
name = "tauri-browser"
version = "0.1.0"
description = "CLI for automating and inspecting Tauri apps via debug bridge"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "tauri-browser"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
