[package]
name = "tauri-browser"
version = "0.4.0"
description = "CLI for automating and inspecting Tauri apps via debug bridge"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["tauri", "automation", "testing", "debug", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "tauri-browser"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
