[package]
name = "tauri-plugin-debug-bridge"
version = "0.2.4"
description = "A dev-only Tauri plugin exposing HTTP+WS debug server for automation"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["tauri", "plugin", "debug", "automation", "testing"]
categories = ["development-tools", "gui"]
links = "tauri-plugin-debug-bridge"

[dependencies]
tauri = { version = "2", features = [] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSBitmapImageRep", "NSImage", "NSImageRep", "NSGraphicsContext"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration"] }
block2 = "0.6"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
